--- a/rbmk-store/angular.json
+++ b/rbmk-store/angular.json
@@ -30,8 +30,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/theme.scss",
-              "src/styles.scss"
+              "src/styles.scss",
+              "src/theme.scss"
             ],
             "scripts": []
           },
@@ -94,8 +94,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/theme.scss",
-              "src/styles.scss"
+              "src/styles.scss",
+              "src/theme.scss"
             ],
             "scripts": []
           }
